# ceres_nav

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
ceres_nav/: CMakeLists.txt
ceres_nav/examples/: CMakeLists.txt  gps_imu_batch.cpp  gps_imu_example.cpp
ceres_nav/examples/include/: FactorGraphUtils.h  GPSIMUExampleUtils.h
ceres_nav/examples/python/: run_gps_imu_batch.py  run_gps_imu_fusion.py
ceres_nav/include/factors/: IMUPreintegrationFactor.h  IMUPriorFactor.h  MarginalizationPrior.h  RelativePoseFactor.h
ceres_nav/include/lib/: Covariance.h  ExtendedPoseParameterBlock.h  FactorGraph.h  ParameterBlock.h  ParameterBlockBase.h  StateCollection.h
ceres_nav/include/local_parameterizations/: ExtendedPoseLocalParameterization.h  PoseLocalParameterization.h
ceres_nav/include/utils/: CostFunctionUtils.h  Utils.h  VectorTypes.h
ceres_nav/src/factors/: RelativeLandmarkFactor.cpp
ceres_nav/src/imu/: IMUHelper.cpp
ceres_nav/src/lib/: Covariance.cpp  FactorGraph.cpp  Marginalization.cpp  StateCollection.cpp
ceres_nav/src/lie/: SO3.cpp
ceres_nav/src/local_parameterizations/: PoseLocalParameterization.cpp
ceres_nav/src/utils/: CostFunctionUtils.cpp  Utils.cpp
ceres_nav/tests/: test_factor_graph.cpp  test_jacobians.cpp  test_parameter_blocks.cpp  test_state_collection.cpp
examples/: CMakeLists.txt  gps_imu_example.cpp
examples/include/: FactorGraphUtils.h  GPSIMUExampleUtils.h
examples/python/: run_gps_imu_fusion.py
include/factors/: AbsolutePositionFactor.h  FEJFactor.h  IMUPreintegrationFactor.h  IMUPriorFactor.h  MarginalizationPrior.h  RelativeLandmarkFactor.h  RelativePoseFactor.h
include/imu/: IMUHelper.h  IMUIncrement.h  IMUPreintegrationHelper.h
include/lib/: Covariance.h  ExtendedPoseParameterBlock.h  FactorGraph.h  LossFunctions.h  Marginalization.h  ParameterBlock.h  ParameterBlockBase.h  PoseParameterBlock.h  SO3ParameterBlock.h  StateCollection.h  StateId.h
include/lie/: LieDirection.h  SE23.h  SE3.h  SO3.h
include/local_parameterizations/: DecoupledExtendedPoseLocalParameterization.h  ExtendedPoseLocalParameterization.h  PoseLocalParameterization.h  SE23LocalParameterization.h  SO3LocalParameterization.h
include/utils/: CostFunctionUtils.h  Timer.h  Utils.h  VectorMath.h  VectorTypes.h
scripts/: install_dependencies.sh
src/: lie_plusplus.cpp
src/factors/: AbsolutePositionFactor.cpp  IMUPreintegrationFactor.cpp  IMUPriorFactor.cpp  MarginalizationPrior.cpp  RelativeLandmarkFactor.cpp  RelativePoseFactor.cpp
src/imu/: IMUHelper.cpp  IMUIncrement.cpp  IMUPreintegrationHelper.cpp
src/lib/: Covariance.cpp  FactorGraph.cpp  StateCollection.cpp
src/lie/: SE23.cpp  SE3.cpp  SO3.cpp
src/local_parameterizations/: DecoupledExtendedPoseLocalParameterization.cpp  ExtendedPoseLocalParameterization.cpp  PoseLocalParameterization.cpp  SE23LocalParameterization.cpp  SO3LocalParameterization.cpp
src/utils/: CostFunctionUtils.cpp  Utils.cpp  VectorMath.cpp
tests/: CMakeLists.txt  test_factor_graph.cpp  test_fej_factor.cpp  test_jacobians.cpp  test_parameter_blocks.cpp  test_state_collection.cpp  test_timing.cpp  test_vector_math.cpp
